# InfoMgr

./: CMakeLists.txt  CMakePresets.json
InfoGUI/: CMakeLists.txt  InfoGUI.cpp  InfoGUI.h
InfoMgr/: CMakeLists.txt  DB.cpp  DB.h  ImageProc.cpp  ImageProc.h  InfoGUI.cpp  InfoGUI.h  InfoMgr.cpp  InfoMgr.h  TaskMgr.cpp  TaskMgr.h
